qt/gen_qfontmetrics.nim


proc fcQFontMetrics_new(param1: pointer): ptr cQFontMetrics {.importc: "QFontMetrics_new".}
proc fcQFontMetrics_new2(font: pointer, pd: pointer): ptr cQFontMetrics {.importc: "QFontMetrics_new2".}
proc fcQFontMetrics_new3(param1: pointer): ptr cQFontMetrics {.importc: "QFontMetrics_new3".}
proc fcQFontMetrics_operatorAssign(self: pointer, param1: pointer): void {.importc: "QFontMetrics_operatorAssign".}
proc fcQFontMetrics_swap(self: pointer, other: pointer): void {.importc: "QFontMetrics_swap".}
proc fcQFontMetrics_ascent(self: pointer, ): cint {.importc: "QFontMetrics_ascent".}
proc fcQFontMetrics_capHeight(self: pointer, ): cint {.importc: "QFontMetrics_capHeight".}
proc fcQFontMetrics_descent(self: pointer, ): cint {.importc: "QFontMetrics_descent".}
proc fcQFontMetrics_height(self: pointer, ): cint {.importc: "QFontMetrics_height".}
proc fcQFontMetrics_leading(self: pointer, ): cint {.importc: "QFontMetrics_leading".}
proc fcQFontMetrics_lineSpacing(self: pointer, ): cint {.importc: "QFontMetrics_lineSpacing".}
proc fcQFontMetrics_minLeftBearing(self: pointer, ): cint {.importc: "QFontMetrics_minLeftBearing".}
proc fcQFontMetrics_minRightBearing(self: pointer, ): cint {.importc: "QFontMetrics_minRightBearing".}
proc fcQFontMetrics_maxWidth(self: pointer, ): cint {.importc: "QFontMetrics_maxWidth".}
proc fcQFontMetrics_xHeight(self: pointer, ): cint {.importc: "QFontMetrics_xHeight".}
proc fcQFontMetrics_averageCharWidth(self: pointer, ): cint {.importc: "QFontMetrics_averageCharWidth".}
proc fcQFontMetrics_inFont(self: pointer, param1: pointer): bool {.importc: "QFontMetrics_inFont".}
proc fcQFontMetrics_inFontUcs4(self: pointer, ucs4: cuint): bool {.importc: "QFontMetrics_inFontUcs4".}
proc fcQFontMetrics_leftBearing(self: pointer, param1: pointer): cint {.importc: "QFontMetrics_leftBearing".}
proc fcQFontMetrics_rightBearing(self: pointer, param1: pointer): cint {.importc: "QFontMetrics_rightBearing".}
proc fcQFontMetrics_width(self: pointer, param1: struct_miqt_string): cint {.importc: "QFontMetrics_width".}
proc fcQFontMetrics_width2(self: pointer, param1: struct_miqt_string, len: cint, flags: cint): cint {.importc: "QFontMetrics_width2".}
proc fcQFontMetrics_widthWithQChar(self: pointer, param1: pointer): cint {.importc: "QFontMetrics_widthWithQChar".}
proc fcQFontMetrics_horizontalAdvance(self: pointer, param1: struct_miqt_string): cint {.importc: "QFontMetrics_horizontalAdvance".}
proc fcQFontMetrics_horizontalAdvanceWithQChar(self: pointer, param1: pointer): cint {.importc: "QFontMetrics_horizontalAdvanceWithQChar".}
proc fcQFontMetrics_charWidth(self: pointer, str: struct_miqt_string, pos: cint): cint {.importc: "QFontMetrics_charWidth".}
proc fcQFontMetrics_boundingRect(self: pointer, param1: pointer): pointer {.importc: "QFontMetrics_boundingRect".}
proc fcQFontMetrics_boundingRectWithText(self: pointer, text: struct_miqt_string): pointer {.importc: "QFontMetrics_boundingRectWithText".}
proc fcQFontMetrics_boundingRect2(self: pointer, r: pointer, flags: cint, text: struct_miqt_string): pointer {.importc: "QFontMetrics_boundingRect2".}
proc fcQFontMetrics_boundingRect3(self: pointer, x: cint, y: cint, w: cint, h: cint, flags: cint, text: struct_miqt_string): pointer {.importc: "QFontMetrics_boundingRect3".}
proc fcQFontMetrics_size(self: pointer, flags: cint, str: struct_miqt_string): pointer {.importc: "QFontMetrics_size".}
proc fcQFontMetrics_tightBoundingRect(self: pointer, text: struct_miqt_string): pointer {.importc: "QFontMetrics_tightBoundingRect".}
proc fcQFontMetrics_elidedText(self: pointer, text: struct_miqt_string, mode: cint, width: cint): struct_miqt_string {.importc: "QFontMetrics_elidedText".}
proc fcQFontMetrics_underlinePos(self: pointer, ): cint {.importc: "QFontMetrics_underlinePos".}
proc fcQFontMetrics_overlinePos(self: pointer, ): cint {.importc: "QFontMetrics_overlinePos".}
proc fcQFontMetrics_strikeOutPos(self: pointer, ): cint {.importc: "QFontMetrics_strikeOutPos".}
proc fcQFontMetrics_lineWidth(self: pointer, ): cint {.importc: "QFontMetrics_lineWidth".}
proc fcQFontMetrics_fontDpi(self: pointer, ): float64 {.importc: "QFontMetrics_fontDpi".}
proc fcQFontMetrics_operatorEqual(self: pointer, other: pointer): bool {.importc: "QFontMetrics_operatorEqual".}
proc fcQFontMetrics_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QFontMetrics_operatorNotEqual".}
proc fcQFontMetrics_width22(self: pointer, param1: struct_miqt_string, len: cint): cint {.importc: "QFontMetrics_width22".}
proc fcQFontMetrics_horizontalAdvance2(self: pointer, param1: struct_miqt_string, len: cint): cint {.importc: "QFontMetrics_horizontalAdvance2".}
proc fcQFontMetrics_boundingRect4(self: pointer, r: pointer, flags: cint, text: struct_miqt_string, tabstops: cint): pointer {.importc: "QFontMetrics_boundingRect4".}
proc fcQFontMetrics_boundingRect5(self: pointer, r: pointer, flags: cint, text: struct_miqt_string, tabstops: cint, tabarray: ptr cint): pointer {.importc: "QFontMetrics_boundingRect5".}
proc fcQFontMetrics_boundingRect7(self: pointer, x: cint, y: cint, w: cint, h: cint, flags: cint, text: struct_miqt_string, tabstops: cint): pointer {.importc: "QFontMetrics_boundingRect7".}
proc fcQFontMetrics_boundingRect8(self: pointer, x: cint, y: cint, w: cint, h: cint, flags: cint, text: struct_miqt_string, tabstops: cint, tabarray: ptr cint): pointer {.importc: "QFontMetrics_boundingRect8".}
proc fcQFontMetrics_size3(self: pointer, flags: cint, str: struct_miqt_string, tabstops: cint): pointer {.importc: "QFontMetrics_size3".}
proc fcQFontMetrics_size4(self: pointer, flags: cint, str: struct_miqt_string, tabstops: cint, tabarray: ptr cint): pointer {.importc: "QFontMetrics_size4".}
proc fcQFontMetrics_elidedText4(self: pointer, text: struct_miqt_string, mode: cint, width: cint, flags: cint): struct_miqt_string {.importc: "QFontMetrics_elidedText4".}
proc fcQFontMetrics_delete(self: pointer) {.importc: "QFontMetrics_delete".}
proc fcQFontMetricsF_new(font: pointer): ptr cQFontMetricsF {.importc: "QFontMetricsF_new".}
proc fcQFontMetricsF_new2(font: pointer, pd: pointer): ptr cQFontMetricsF {.importc: "QFontMetricsF_new2".}
proc fcQFontMetricsF_new3(param1: pointer): ptr cQFontMetricsF {.importc: "QFontMetricsF_new3".}
proc fcQFontMetricsF_new4(param1: pointer): ptr cQFontMetricsF {.importc: "QFontMetricsF_new4".}
proc fcQFontMetricsF_operatorAssign(self: pointer, param1: pointer): void {.importc: "QFontMetricsF_operatorAssign".}
proc fcQFontMetricsF_operatorAssignWithQFontMetrics(self: pointer, param1: pointer): void {.importc: "QFontMetricsF_operatorAssignWithQFontMetrics".}
proc fcQFontMetricsF_swap(self: pointer, other: pointer): void {.importc: "QFontMetricsF_swap".}
proc fcQFontMetricsF_ascent(self: pointer, ): float64 {.importc: "QFontMetricsF_ascent".}
proc fcQFontMetricsF_capHeight(self: pointer, ): float64 {.importc: "QFontMetricsF_capHeight".}
proc fcQFontMetricsF_descent(self: pointer, ): float64 {.importc: "QFontMetricsF_descent".}
proc fcQFontMetricsF_height(self: pointer, ): float64 {.importc: "QFontMetricsF_height".}
proc fcQFontMetricsF_leading(self: pointer, ): float64 {.importc: "QFontMetricsF_leading".}
proc fcQFontMetricsF_lineSpacing(self: pointer, ): float64 {.importc: "QFontMetricsF_lineSpacing".}
proc fcQFontMetricsF_minLeftBearing(self: pointer, ): float64 {.importc: "QFontMetricsF_minLeftBearing".}
proc fcQFontMetricsF_minRightBearing(self: pointer, ): float64 {.importc: "QFontMetricsF_minRightBearing".}
proc fcQFontMetricsF_maxWidth(self: pointer, ): float64 {.importc: "QFontMetricsF_maxWidth".}
proc fcQFontMetricsF_xHeight(self: pointer, ): float64 {.importc: "QFontMetricsF_xHeight".}
proc fcQFontMetricsF_averageCharWidth(self: pointer, ): float64 {.importc: "QFontMetricsF_averageCharWidth".}
proc fcQFontMetricsF_inFont(self: pointer, param1: pointer): bool {.importc: "QFontMetricsF_inFont".}
proc fcQFontMetricsF_inFontUcs4(self: pointer, ucs4: cuint): bool {.importc: "QFontMetricsF_inFontUcs4".}
proc fcQFontMetricsF_leftBearing(self: pointer, param1: pointer): float64 {.importc: "QFontMetricsF_leftBearing".}
proc fcQFontMetricsF_rightBearing(self: pointer, param1: pointer): float64 {.importc: "QFontMetricsF_rightBearing".}
proc fcQFontMetricsF_width(self: pointer, string: struct_miqt_string): float64 {.importc: "QFontMetricsF_width".}
proc fcQFontMetricsF_widthWithQChar(self: pointer, param1: pointer): float64 {.importc: "QFontMetricsF_widthWithQChar".}
proc fcQFontMetricsF_horizontalAdvance(self: pointer, string: struct_miqt_string): float64 {.importc: "QFontMetricsF_horizontalAdvance".}
proc fcQFontMetricsF_horizontalAdvanceWithQChar(self: pointer, param1: pointer): float64 {.importc: "QFontMetricsF_horizontalAdvanceWithQChar".}
proc fcQFontMetricsF_boundingRect(self: pointer, string: struct_miqt_string): pointer {.importc: "QFontMetricsF_boundingRect".}
proc fcQFontMetricsF_boundingRectWithQChar(self: pointer, param1: pointer): pointer {.importc: "QFontMetricsF_boundingRectWithQChar".}
proc fcQFontMetricsF_boundingRect2(self: pointer, r: pointer, flags: cint, string: struct_miqt_string): pointer {.importc: "QFontMetricsF_boundingRect2".}
proc fcQFontMetricsF_size(self: pointer, flags: cint, str: struct_miqt_string): pointer {.importc: "QFontMetricsF_size".}
proc fcQFontMetricsF_tightBoundingRect(self: pointer, text: struct_miqt_string): pointer {.importc: "QFontMetricsF_tightBoundingRect".}
proc fcQFontMetricsF_elidedText(self: pointer, text: struct_miqt_string, mode: cint, width: float64): struct_miqt_string {.importc: "QFontMetricsF_elidedText".}
proc fcQFontMetricsF_underlinePos(self: pointer, ): float64 {.importc: "QFontMetricsF_underlinePos".}
proc fcQFontMetricsF_overlinePos(self: pointer, ): float64 {.importc: "QFontMetricsF_overlinePos".}
proc fcQFontMetricsF_strikeOutPos(self: pointer, ): float64 {.importc: "QFontMetricsF_strikeOutPos".}
proc fcQFontMetricsF_lineWidth(self: pointer, ): float64 {.importc: "QFontMetricsF_lineWidth".}
proc fcQFontMetricsF_fontDpi(self: pointer, ): float64 {.importc: "QFontMetricsF_fontDpi".}
proc fcQFontMetricsF_operatorEqual(self: pointer, other: pointer): bool {.importc: "QFontMetricsF_operatorEqual".}
proc fcQFontMetricsF_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QFontMetricsF_operatorNotEqual".}
proc fcQFontMetricsF_horizontalAdvance2(self: pointer, string: struct_miqt_string, length: cint): float64 {.importc: "QFontMetricsF_horizontalAdvance2".}
proc fcQFontMetricsF_boundingRect4(self: pointer, r: pointer, flags: cint, string: struct_miqt_string, tabstops: cint): pointer {.importc: "QFontMetricsF_boundingRect4".}
proc fcQFontMetricsF_boundingRect5(self: pointer, r: pointer, flags: cint, string: struct_miqt_string, tabstops: cint, tabarray: ptr cint): pointer {.importc: "QFontMetricsF_boundingRect5".}
proc fcQFontMetricsF_size3(self: pointer, flags: cint, str: struct_miqt_string, tabstops: cint): pointer {.importc: "QFontMetricsF_size3".}
proc fcQFontMetricsF_size4(self: pointer, flags: cint, str: struct_miqt_string, tabstops: cint, tabarray: ptr cint): pointer {.importc: "QFontMetricsF_size4".}
proc fcQFontMetricsF_elidedText4(self: pointer, text: struct_miqt_string, mode: cint, width: float64, flags: cint): struct_miqt_string {.importc: "QFontMetricsF_elidedText4".}
proc fcQFontMetricsF_delete(self: pointer) {.importc: "QFontMetricsF_delete".}


func init*(T: type QFontMetrics, h: ptr cQFontMetrics): QFontMetrics =
  T(h: h)
proc create*(T: type QFontMetrics, param1: gen_qfont.QFont): QFontMetrics =

  QFontMetrics.init(fcQFontMetrics_new(param1.h))
proc create*(T: type QFontMetrics, font: gen_qfont.QFont, pd: gen_qpaintdevice.QPaintDevice): QFontMetrics =

  QFontMetrics.init(fcQFontMetrics_new2(font.h, pd.h))
proc create2*(T: type QFontMetrics, param1: QFontMetrics): QFontMetrics =

  QFontMetrics.init(fcQFontMetrics_new3(param1.h))
proc operatorAssign*(self: QFontMetrics, param1: QFontMetrics): void =
